src/EGADS/include/egads.h

__ProtoExt__ int  EG_getTessEdge( const ego tess, int eIndex, int *len, 
                                  const double **xyz, const double **t );
__ProtoExt__ int  EG_getTessFace( const ego tess, int fIndex, int *len, 
                                  const double **xyz, const double **uv, 
                                  const int **ptype, const int **pindex, 
                                  int *ntri, const int **tris, 
                                  const int **tric );
__ProtoExt__ int  EG_getTessLoops( const ego tess, int fIndex, int *nloop,
                                   const int **lIndices );
__ProtoExt__ int  EG_getTessQuads( const ego tess, int *nquad,
                                   int **fIndices );
__ProtoExt__ int  EG_makeQuads( ego tess, double *params, int fIndex );
__ProtoExt__ int  EG_getQuads( const ego tess, int fIndex, int *len, 
                                  const double **xyz, const double **uv, 
                                  const int **ptype, const int **pindex, 
                                  int *npatch );
__ProtoExt__ int  EG_getPatch( const ego tess, int fIndex, int patch, 
                               int *nu, int *nv, const int **ipts, 
                               const int **bounds );
__ProtoExt__ int  EG_quadTess( const ego tess, ego *quadTess );
                               
__ProtoExt__ int  EG_insertEdgeVerts( ego tess, int eIndex, int vIndex, 
                                      int npts, double *t );
__ProtoExt__ int  EG_deleteEdgeVert( ego tess, int eIndex, int vIndex, 
                                     int dir );
__ProtoExt__ int  EG_moveEdgeVert( ego tess, int eIndex, int vIndex, 
                                   double t );
 
__ProtoExt__ int  EG_openTessBody( ego tess );
__ProtoExt__ int  EG_initTessBody( ego object, ego *tess );
__ProtoExt__ int  EG_statusTessBody( ego tess, ego *body, int *state, int *np );
__ProtoExt__ int  EG_setTessEdge( ego tess, int eIndex, int len,
                                  const double *xyz, const double *t );
__ProtoExt__ int  EG_setTessFace( ego tess, int fIndex, int len,
                                  const double *xyz, const double *uv,
                                  int ntri, const int *tris );
__ProtoExt__ int  EG_localToGlobal( const ego tess, int index, int local,
                                    int *global );
__ProtoExt__ int  EG_getGlobal( const ego tess, int global, int *ptype,
                                int *pindex, /*@null@*/ double *xyz );
__ProtoExt__ int  EG_saveTess( ego tess, const char *name );
__ProtoExt__ int  EG_loadTess( ego body, const char *name, ego *tess );
  
__ProtoExt__ int  EG_tessMassProps( const ego tess, double *props );
/* top down build functions */

__ProtoExt__ int  EG_fuseSheets( const ego src, const ego tool, ego *sheet );
__ProtoExt__ int  EG_generalBoolean( ego src, ego tool, int oper, double tol,
                                     ego *model );
__ProtoExt__ int  EG_solidBoolean( const ego src, const ego tool, int oper, 
                                   ego *model );
__ProtoExt__ int  EG_intersection( const ego src, const ego tool, int *nedge, 
                                   /*@null@*/ ego **facEdg, ego *model );
__ProtoExt__ int  EG_imprintBody( const ego src, int nedge, const ego *facEdg, 
                                  ego *result );
__ProtoExt__ int  EG_filletBody( const ego src, int nedge, const ego *edges, 
                                 double radius,
                                 ego *result, /*@null@*/ int **facemap );
__ProtoExt__ int  EG_chamferBody( const ego src, int nedge, const ego *edges, 
                                  const ego *faces, double dis1, double dis2, 
                                  ego *result, /*@null@*/ int **facemap );
__ProtoExt__ int  EG_hollowBody( const ego src, int nface,
                                 /*@null@*/ const ego *faces, double offset,
                                 int join, ego *result,
                                 /*@null@*/ int **facemap );
__ProtoExt__ int  EG_extrude( const ego src, double dist, const double *dir, 
                                    ego *result );
__ProtoExt__ int  EG_rotate( const ego src, double angle, const double *axis, 
                                   ego *result );
__ProtoExt__ int  EG_sweep( const ego src, const ego spine, int mode,
                                  ego *result );
__ProtoExt__ int  EG_loft( int nsec, const ego *secs, int opt, ego *result );
__ProtoExt__ int  EG_blend( int nsec, const ego *secs, /*@null@*/ double *rc1,
                            /*@null@*/ double *rcN, ego *result );
__ProtoExt__ int  EG_ruled( int nsec, const ego *secs, ego *result );
/* effective topology functions */

__ProtoExt__ int  EG_initEBody( ego tess, double angle, ego *ebody );
__ProtoExt__ int  EG_finishEBody( ego EBody );
__ProtoExt__ int  EG_makeEFace( ego EBody, int nFace, ego *Faces, ego *EFace );
__ProtoExt__ int  EG_makeAttrEFaces( ego EBody, const char *attrName, int *nEFace,
                                     /*@null@*/ ego **EFaces );
__ProtoExt__ int  EG_effectiveMap( ego EObject, double *eparam, ego *Object,
                                   double *param );
__ProtoExt__ int  EG_effectiveEdgeList( ego EEdge, int *nedge, ego **edges,
                                        int **senses, double **tstart );
/* other functions */

__ProtoExt__ int  EG_inTriExact( double *t1, double *t2, double *t3, double *p,
                                 double *w );