src/EGADS/include/egads_dot.h

__ProtoExt__ int  EG_setGeometry_dot( ego geom, int oclass, int mtype,
                                      /*@null@*/ const int *ints,
                                      /*@null@*/ const double *reals,
                                      /*@null@*/ const double *reals_dot );
__ProtoExt__ int  EG_hasGeometry_dot( const ego geom );
__ProtoExt__ int  EG_copyGeometry_dot( const ego obj,
                                       /*@null@*/ const double *mat,
                                       /*@null@*/ const double *mat_dot,
                                       ego copy );
__ProtoExt__ int  EG_evaluate_dot( const ego geom,
                                   /*@null@*/ const double *params,
                                   /*@null@*/ const double *params_dot,
                                   double *results, double *results_dot );
__ProtoExt__ int  EG_approximate_dot( ego bspline, int mDeg, double tol,
                                      const int *sizes,
                                      const double *xyzs, const double *xyzs_dot );
__ProtoExt__ int EG_skinning_dot(ego surface, int nCurves, ego *curves);
__ProtoExt__ int  EG_makeSolidBody_dot( ego body, int stype, const double *data,
                                        const double *data_dot );
__ProtoExt__ int  EG_setRange_dot( ego object, int oclass,
                                   const double *range, const double *range_dot );
__ProtoExt__ int  EG_getRange_dot( const ego geom,
                                   double *range, double *range_dot, int *periodic );
/* tessellation functions */

__ProtoExt__ int  EG_tessMassProps_dot( const ego tess, double *xyz_dot,
                                        double *props, double *props_dot );
/* high level functions */

__ProtoExt__ int  EG_extrude_dot( ego body, const ego src,
                                  double dist, double dist_dot,
                                  const double *dir, const double *dir_dot );
__ProtoExt__ int  EG_ruled_dot( ego body, int nSection, const ego *sections );
__ProtoExt__ int  EG_blend_dot( ego body, int nSection, const ego *sections,
                                /*@null@*/ double *rc1,
                                /*@null@*/ double *rc1_dot,
                                /*@null@*/ double *rcN,
                                /*@null@*/ double *rcN_dot );
int  EG_setGeometry_dot( ego geom, int oclass, int mtype,
                         /*@null@*/ const int *ivec, SurrealS<1> *rvec_dot );
int  EG_copyGeometry_dot( const egObject *obj,
                          /*@null@*/ const SurrealS<1> *xform,
                          ego copy );
int  EG_approximate_dot( ego bspline, int maxdeg, double tol,
                         const int *sizes,
                         const SurrealS<1> *data );
int  EG_setRange_dot( ego geom, int oclass, const SurrealS<1> *range);