pyESP/pyEGADS/egads.py


_egads.EG_getTessEdge.argtypes = [c_ego, c_int, POINTER(c_int), POINTER(POINTER(c_double)), POINTER(POINTER(c_double))]
_egads.EG_getTessEdge.restype = c_int

_egads.EG_getTessFace.argtypes = [c_ego, c_int, POINTER(c_int), POINTER(POINTER(c_double)), POINTER(POINTER(c_double)), POINTER(POINTER(c_int)), POINTER(POINTER(c_int)), POINTER(c_int), POINTER(POINTER(c_int)), POINTER(POINTER(c_int))]
_egads.EG_getTessFace.restype = c_int

_egads.EG_getTessLoops.argtypes = [c_ego, c_int, POINTER(c_int), POINTER(POINTER(c_int))]
_egads.EG_getTessLoops.restype = c_int

_egads.EG_getTessQuads.argtypes = [c_ego, POINTER(c_int), POINTER(POINTER(c_int))]
_egads.EG_getTessQuads.restype = c_int

_egads.EG_makeQuads.argtypes = [c_ego, POINTER(c_double), c_int]
_egads.EG_makeQuads.restype = c_int

_egads.EG_getQuads.argtypes = [c_ego, c_int, POINTER(c_int), POINTER(POINTER(c_double)), POINTER(POINTER(c_double)), POINTER(POINTER(c_int)), POINTER(POINTER(c_int)), POINTER(c_int)]
_egads.EG_getQuads.restype = c_int

_egads.EG_getPatch.argtypes = [c_ego, c_int, c_int, POINTER(c_int), POINTER(c_int), POINTER(POINTER(c_int)), POINTER(POINTER(c_int))]
_egads.EG_getPatch.restype = c_int

_egads.EG_quadTess.argtypes = [c_ego, POINTER(c_ego)]
_egads.EG_quadTess.restype = c_int

_egads.EG_insertEdgeVerts.argtypes = [c_ego, c_int, c_int, c_int, POINTER(c_double)]
_egads.EG_insertEdgeVerts.restype = c_int

_egads.EG_deleteEdgeVert.argtypes = [c_ego, c_int, c_int, c_int]
_egads.EG_deleteEdgeVert.restype = c_int

_egads.EG_moveEdgeVert.argtypes = [c_ego, c_int, c_int, c_double]
_egads.EG_moveEdgeVert.restype = c_int

_egads.EG_openTessBody.argtypes = [c_ego]
_egads.EG_openTessBody.restype = c_int

_egads.EG_initTessBody.argtypes = [c_ego, POINTER(c_ego)]
_egads.EG_initTessBody.restype = c_int

_egads.EG_statusTessBody.argtypes = [c_ego, POINTER(c_ego), POINTER(c_int), POINTER(c_int)]
_egads.EG_statusTessBody.restype = c_int

_egads.EG_setTessEdge.argtypes = [c_ego, c_int, c_int, POINTER(c_double), POINTER(c_double)]
_egads.EG_setTessEdge.restype = c_int

_egads.EG_setTessFace.argtypes = [c_ego, c_int, c_int, POINTER(c_double), POINTER(c_double), c_int, POINTER(c_int)]
_egads.EG_setTessFace.restype = c_int

_egads.EG_localToGlobal.argtypes = [c_ego, c_int, c_int, POINTER(c_int)]
_egads.EG_localToGlobal.restype = c_int

_egads.EG_getGlobal.argtypes = [c_ego, c_int, POINTER(c_int), POINTER(c_int), POINTER(c_double)]
_egads.EG_getGlobal.restype = c_int

_egads.EG_saveTess.argtypes = [c_ego, c_char_p]
_egads.EG_saveTess.restype = c_int

_egads.EG_loadTess.argtypes = [c_ego, c_char_p, POINTER(c_ego)]
_egads.EG_loadTess.restype = c_int

_egads.EG_tessMassProps.argtypes = [c_ego, POINTER(c_double)]
_egads.EG_tessMassProps.restype = c_int

_egads.EG_fuseSheets.argtypes = [c_ego, c_ego, POINTER(c_ego)]
_egads.EG_fuseSheets.restype = c_int

_egads.EG_generalBoolean.argtypes = [c_ego, c_ego, c_int, c_double, POINTER(c_ego)]
_egads.EG_generalBoolean.restype = c_int

_egads.EG_solidBoolean.argtypes = [c_ego, c_ego, c_int, POINTER(c_ego)]
_egads.EG_solidBoolean.restype = c_int

_egads.EG_intersection.argtypes = [c_ego, c_ego, POINTER(c_int), POINTER(POINTER(c_ego)), POINTER(c_ego)]
_egads.EG_intersection.restype = c_int

_egads.EG_imprintBody.argtypes = [c_ego, c_int, POINTER(c_ego), POINTER(c_ego)]
_egads.EG_imprintBody.restype = c_int

_egads.EG_filletBody.argtypes = [c_ego, c_int, POINTER(c_ego), c_double, POINTER(c_ego), POINTER(POINTER(c_int))]
_egads.EG_filletBody.restype = c_int

_egads.EG_chamferBody.argtypes = [c_ego, c_int, POINTER(c_ego), POINTER(c_ego), c_double, c_double, POINTER(c_ego), POINTER(POINTER(c_int))]
_egads.EG_chamferBody.restype = c_int

_egads.EG_hollowBody.argtypes = [c_ego, c_int, POINTER(c_ego), c_double, c_int, POINTER(c_ego), POINTER(POINTER(c_int))]
_egads.EG_hollowBody.restype = c_int

_egads.EG_extrude.argtypes = [c_ego, c_double, POINTER(c_double), POINTER(c_ego)]
_egads.EG_extrude.restype = c_int

_egads.EG_rotate.argtypes = [c_ego, c_double, POINTER(c_double), POINTER(c_ego)]
_egads.EG_rotate.restype = c_int

_egads.EG_sweep.argtypes = [c_ego, c_ego, c_int, POINTER(c_ego)]
_egads.EG_sweep.restype = c_int

_egads.EG_loft.argtypes = [c_int, POINTER(c_ego), c_int, POINTER(c_ego)]
_egads.EG_loft.restype = c_int

_egads.EG_blend.argtypes = [c_int, POINTER(c_ego), POINTER(c_double), POINTER(c_double), POINTER(c_ego)]
_egads.EG_blend.restype = c_int

_egads.EG_ruled.argtypes = [c_int, POINTER(c_ego), POINTER(c_ego)]
_egads.EG_ruled.restype = c_int

_egads.EG_initEBody.argtypes = [c_ego, c_double, POINTER(c_ego)]
_egads.EG_initEBody.restype = c_int

_egads.EG_finishEBody.argtypes = [c_ego]
_egads.EG_finishEBody.restype = c_int

_egads.EG_makeEFace.argtypes = [c_ego, c_int, POINTER(c_ego), POINTER(c_ego)]
_egads.EG_makeEFace.restype = c_int

_egads.EG_makeAttrEFaces.argtypes = [c_ego, c_char_p, POINTER(c_int), POINTER(POINTER(c_ego))]
_egads.EG_makeAttrEFaces.restype = c_int

_egads.EG_effectiveMap.argtypes = [c_ego, POINTER(c_double), POINTER(c_ego), POINTER(c_double)]
_egads.EG_effectiveMap.restype = c_int

_egads.EG_effectiveEdgeList.argtypes = [c_ego, POINTER(c_int), POINTER(POINTER(c_ego)), POINTER(POINTER(c_int)), POINTER(POINTER(c_double))]
_egads.EG_effectiveEdgeList.restype = c_int

_egads.EG_inTriExact.argtypes = [POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double)]
_egads.EG_inTriExact.restype = c_int

# =============================================================================
#
# egads_dot.h functions
#
# =============================================================================

_egads.EG_setGeometry_dot.argtypes = [c_ego, c_int, c_int, POINTER(c_int), POINTER(c_double), POINTER(c_double)]
_egads.EG_setGeometry_dot.restype = c_int

_egads.EG_hasGeometry_dot.argtypes = [c_ego]
_egads.EG_hasGeometry_dot.restype = c_int

_egads.EG_copyGeometry_dot.argtypes = [c_ego, POINTER(c_double), POINTER(c_double), c_ego]
_egads.EG_copyGeometry_dot.restype = c_int

_egads.EG_evaluate_dot.argtypes = [c_ego, POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double)]
_egads.EG_evaluate_dot.restype = c_int

_egads.EG_approximate_dot.argtypes = [c_ego, c_int, c_double, POINTER(c_int), POINTER(c_double), POINTER(c_double)]
_egads.EG_approximate_dot.restype = c_int

_egads.EG_skinning_dot.argtypes = [c_ego, c_int, POINTER(c_ego)]
_egads.EG_skinning_dot.restype = c_int

_egads.EG_makeSolidBody_dot.argtypes = [c_ego, c_int, POINTER(c_double), POINTER(c_double)]
_egads.EG_makeSolidBody_dot.restype = c_int

_egads.EG_setRange_dot.argtypes = [c_ego, c_int, POINTER(c_double), POINTER(c_double)]
_egads.EG_setRange_dot.restype = c_int

_egads.EG_getRange_dot.argtypes = [c_ego, POINTER(c_double), POINTER(c_double), POINTER(c_int)]
_egads.EG_getRange_dot.restype = c_int

_egads.EG_tessMassProps_dot.argtypes = [c_ego, POINTER(c_double), POINTER(c_double), POINTER(c_double)]
_egads.EG_tessMassProps_dot.restype = c_int

_egads.EG_extrude_dot.argtypes = [c_ego, c_ego, c_double, c_double, POINTER(c_double), POINTER(c_double)]
_egads.EG_extrude_dot.restype = c_int

_egads.EG_ruled_dot.argtypes = [c_ego, c_int, POINTER(c_ego)]
_egads.EG_ruled_dot.restype = c_int

_egads.EG_blend_dot.argtypes = [c_ego, c_int, POINTER(c_ego), POINTER(c_double), POINTER(c_double), POINTER(c_double), POINTER(c_double)]
_egads.EG_blend_dot.restype = c_int

# =============================================================================
# Register the egads shared library with common
egads_common._egads = _egads

delattr(Context, "importModel")
